# aios

./: .env.local.example  .gitignore  AI OS v2 能力架构图需求分析.pages  Package.swift  README.md  README.zh-CN.md  main.py  pyproject.toml
.codex/environments/: environment.toml
.tmpdata-runtime-check/: ai_os.db
.tmpdata-runtime-exec/: ai_os.db
ai_os/: __init__.py  api.py  bootstrap.py  candidates.py  cloud_intelligence.py  domain.py  env_loader.py  event_query.py  kernel.py  kernel_execution.py  kernel_services.py  legacy_services.py  plugin_registry.py  policy.py  scheduler.py  services.py  storage.py  verification.py  workflow_registry.py  workflows.py
ai_os/capabilities/: __init__.py  base.py  local_files.py  messaging.py  registry.py  scheduling.py
ai_os/capabilities/manifests/: aios_local_calendar.json  aios_local_messaging.json  aios_local_reminders.json  calendar.json  local_files.json  messaging.json  notes.json  reminders.json  (+3 more)
ai_os/domain/: __init__.py  calendar.py  candidates.py  capability.py  common.py  device.py  goal.py  intake.py  memory.py  plugin.py  policy.py  relations.py  runtime.py  scheduler.py  self_profile.py  task.py  usage.py  workflow.py
ai_os/repositories/: __init__.py  db.py  devices.py  events.py  state.py
ai_os/runtimes/: __init__.py  base.py  claude_code.py  registry.py
docs/: claude-code-integration.md  quickstart.zh-CN.md
macos/AIOSMac/: Branding.md  ExportOptions.plist  Info.plist  README.md
plugins/ai-os-core/: plugin.json
plugins/claude-code/: plugin.json
runtimes/claude-code/: runtime.json
tests/: test_services.py
(+22 files in other folders)
