[project]
name = "ai-os"
version = "0.1.0"
description = "Local-first AIOS MVP kernel"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.9,<3.0",
  "uvicorn>=0.32,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_os"]
